# fahma-daily-frost-op

./: .gitignore  .gitmodules  README.md  make.py  pushprivateblocks.py  pyproject.toml  pytest.ini
lib/clearnights/: README.md  pyproject.toml
lib/clearnights/clearnights/: clearnights.py
lib/clearnights/clearnights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/clearnights/tests/: test_bars_LST_sensors.py  test_clearnights.py
lib/clearnights/tests/data/: reference_sites.csv
lib/clearnights/tests/data/eratos_lst_reference_sites/: fahma.himawari.lst.raw.2km.albany_-34.94_117.8158.csv  fahma.himawari.lst.raw.2km.boorowa_-34.47_148.69.csv  fahma.himawari.lst.raw.2km.cummins_aero_-34.25_135.71.csv  fahma.himawari.lst.raw.2km.cunderdin_-31.62_117.22.csv  fahma.himawari.lst.raw.2km.dubbo_-32.22_148.58.csv  fahma.himawari.lst.raw.2km.esperance_-33.83_121.89.csv  (+11 more)
scripts/: plot_outputs.py
src/: block_descriptor.yaml  daily_frost_metrics_on_demand.py  entry.py  manifest.json  senaps_wrapper.py
src/dependencies/: clearnights-1.0.1-py2.py3-none-any.whl  clearnights-1.0.1-py3-none-any 2.whl  clearnights-1.0.1-py3-none-any.whl  clearnights-1.0.3-py2.py3-none-any.whl  clearnights-2.0.1-py3-none-any.whl  clearnights_on_demand_operator-0.1.0-py3-none-any 2.whl  clearnights_on_demand_operator-0.1.0-py3-none-any.whl  fahma_daily_frost_metrics-1.1.0-py3-none-any.whl
src/operator/: block_descriptor.yaml  op.yaml
test/: test_daily_frost_metrics_op.py
test/subset_api_test/: min_temp_op.nc  min_temp_subset.tif  raw_lst_slice.nc  subset_tiff.py
